- Criado pacote de Utils para utils do sistema. - Criado classe Util de gerador de identificador unico. - Criado CRUD de BookCategory. - Criado BaseRepository.java para disponibilizar a rotina de findByCode. - Alterado para que todos os repositories utilizem o BaseRepository.java. - Alterado funcionamento do metódo HTTP PUT.

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+		<dependency>
+			<groupId>org.mindrot</groupId>
+			<artifactId>jbcrypt</artifactId>
+			<version>0.3m</version>
+		</dependency>
     </dependencies>
 
 	<build>
